feat: :sparkles: Updated swagger, formated date from blogresponse
